fixed photo_lighbox overflow width issue on open/close of lightbox event

--- a/src/css/_property.scss
+++ b/src/css/_property.scss
@@ -101,7 +101,7 @@
             -webkit-transition: -webkit-transform 0.5s;
 
             &.scaledOut{
-                -webkit-transform: scale(2);
+                -webkit-transform: scale(2.5);
             }
         }
     }
